move from footnote to body

--- a/content/post/2023-11-03-odds-are-you-re-using-probabilities-to-describe-event-outcomes/index.Rmd
+++ b/content/post/2023-11-03-odds-are-you-re-using-probabilities-to-describe-event-outcomes/index.Rmd
@@ -35,7 +35,7 @@ Note that if you are completely new to odds, you should first start here: [Ratio
 
 # When odds are helpful
 
-You make a glass of chocolate milk for your nephew and add 1 part chocolate for every 9 parts milk. He takes a sip and says, "Please make it three times as chocolatey." The most obvious way to satisfy his request would be to triple the amount of chocolate in the cup^[The size of his sip is being approximated to a size of 0 parts.], i.e. the ratio of chocolate to milk should go from 1 : 9 to 3 : 9. To go from one part chocolate to three parts chocolate you simply add two more parts chocolate, bringing the beverage to the correct 3 to 9 chocolate to milk ratio (simplified: 1 to 3). If instead you took his comment as him wanting the cup to be composed of $\frac{3}{10}$ chocolate rather than the current $\frac{1}{10}$ chocolate, your calculations (without starting over on the drink) would be more complicated^[If you go through the hassle, you would realize you'd need to add $\frac{20}{7}$ more parts of chocolate to the beverage.]. 
+You make a glass of chocolate milk for your nephew and add 1 part chocolate for every 9 parts milk. He takes a sip and says, "Please make it three times as chocolatey." The most obvious way to satisfy his request would be to triple the amount of chocolate in the cup^[The size of his sip is being approximated to a size of 0 parts.], i.e. the ratio of chocolate to milk should go from 1 : 9 to 3 : 9. To go from one part chocolate to three parts chocolate you simply add two more parts chocolate, bringing the beverage to the correct 3 to 9 chocolate to milk ratio (simplified: 1 to 3). If instead you took his comment as him wanting the cup to be composed of $\frac{3}{10}$ chocolate rather than the current $\frac{1}{10}$ chocolate, your calculations (without starting over on the drink) would be more complicated (in the original units it would come out to 2 and $\frac{6}{7}$ parts of chocolate needs to be added). 
 
 In a similar way that it can be easier to think of parts of recipes in terms of ratios rather than fractions out of a whole, it can sometimes be easier to think of event distributions in terms of odds rather than probabilities.
 
